<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ventriloid</string>
    <string name="service_name">Ventriloid Service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_options">Options</string>
    <string name="menu_manage">Manage Servers</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_add">Add</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_save">Save</string>
    <string name="menu_add_server">Add Server</string>
    <string name="menu_edit_server">Edit Server</string>
    <string name="menu_show_menu">Show Menu</string>
    <string name="menu_switch_view">Switch View</string>
    <string name="menu_server_view">Server</string>
    <string name="menu_channel_view">Channel</string>
    <string name="menu_mute">Mute</string>
    <string name="menu_unmute">Unmute</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="no_servers">No Servers Added</string>
    <string name="username">Username</string>
    <string name="phonetic">Phonetic</string>
    <string name="servername">Server Name</string>
    <string name="hostname">Hostname</string>
    <string name="port">Port</string>
    <string name="password">Password</string>
    <string name="colon">:</string>
    <string name="required">*</string>
    <string name="connected">Connected</string>
    <string name="ptt">Push to Talk</string>
    <string name="chat">Chat</string>
    <string name="close_chat">Close Chat</string>
    <string name="edit_hint">Type message</string>
    <string name="mangler"><b><u>The Developers of Mangler:</u></b>\nEric Connell\nDaniel Sloof\nhumbaba (anonymous)\nHaxar (anonymous)\nFelyza Wishbringer\nBob Shaffer II</string>
    <string name="spux"><b><u>The Developers of Spux:</u></b>\nMichael Sierks\nCris Favero</string>
    <string name="vent_enc"><b><u>Ventrilo Encryption Algorithm:</u></b>\nLuigi Auriemma</string>

</resources>